[pytool] default path

--- a/pydevtoolplatform/smalltools/default.ini
+++ b/pydevtoolplatform/smalltools/default.ini
@@ -1,5 +1,6 @@
 [default]
-
+default_src_dir = C:\Users\seoung\workspace\pytool
+default_dst_dir = C:\Users\seoung\workspace\test
 exclude_dir = .git
               webcrawling
     
