--- a/pydevtoolplatform/smalltools/exclude_pattern.ini
+++ b/pydevtoolplatform/smalltools/exclude_pattern.ini
@@ -1,6 +1,8 @@
 [default]
+default_src_dir = C:\Users\seoung\workspace\pytool
+default_dst_dir = C:\Users\seoung\workspace\test
 
-exclude_dir = .git
-              webcrawling
+exclude_dir = .git              
     
 exclude_pattern = **/*.pyc
+                  **/*.py
