[pytool] version check

--- a/pydevtoolplatform/smalltools/default.ini
+++ b/pydevtoolplatform/smalltools/default.ini
@@ -1,7 +1,5 @@
 [default]
 default_src_dir = C:\Users\seoung\workspace\pytool
 default_dst_dir = C:\Users\seoung\workspace\test
-exclude_dir = .git
-              webcrawling
-    
-exclude_pattern = **/*.pyc
+exclude_dir = anydontremove    
+exclude_pattern = .gitmessage.txt
