virtual test timer

--- a/pytest/scenario/test1.cfg
+++ b/pytest/scenario/test1.cfg
@@ -1,7 +1,8 @@
 [TestConfig]
     txid = 0xabc
     rxid = 0x123
-    tx_cycle = 1000   ; ms
+    ; ms
+    rx_tx_gap = 500
     tx_channel = 0
     rx_channel = 0
     rx_sig_check = lamp
